[DDW-1131] Fix Stake pool URL wrapping

--- a/source/renderer/app/components/staking/stake-pools/StakePoolTooltip.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolTooltip.scss
@@ -201,6 +201,7 @@
   border-bottom-color: var(--theme-link-main-color);
   font-size: 14px;
   line-height: 1.36;
+  word-break: break-all;
 }
 
 .pledgeAddress {
